--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@monaco-editor/react": "^4.6.0",
     "antd": "^5.14.0",
     "axios": "^1.6.0",
+    "dayjs": "^1.11.19",
     "echarts": "^5.4.0",
     "echarts-for-react": "^3.0.2",
     "react": "^18.2.0",
